# bevy_simpletoon

./: Cargo.toml  README.md
examples/: basic_shapes.rs  shapes.rs
src/: plugin.rs
src/assets/: toon.wgsl
